// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb cheniG"
    role="button"
  >
    <button
      class="sc-AxirZ sc-AxiKw ekRbGL sc-AxheI cbsHKE"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
      <div
        class="sc-Axmtr kFYDZB"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#D1D5DA"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb cheniG"
    role="button"
  >
    <button
      class="sc-AxirZ sc-AxiKw gRAqhe sc-AxheI cbsHKE"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
      <div
        class="sc-Axmtr kFYDZB"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#FDFEFF"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-fzplWN giuPsl"
  >
    <div
      class="sc-fzpans iafMum"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="sc-AxmLO huMKRI"
      >
        <hr
          class="sc-fzoLsD kYtNNl"
        />
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            保存する
          </p>
        </div>
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            保存して実行する
          </p>
        </div>
        <hr
          class="sc-fzoLsD kYtNNl"
        />
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            下書きとして保存する
          </p>
        </div>
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            やっぱり何もしない
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb cheniG"
    role="button"
  >
    <button
      class="sc-AxirZ sc-AxiKw dnBLnw sc-AxhUy bnlmnx"
      disabled=""
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
    </button>
    <button
      class="sc-AxirZ sc-AxiKw dnBLnw sc-AxgMl hGPnli"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      <div
        class="sc-Axmtr kFYDZB"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#D1D5DA"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb cheniG"
    role="button"
  >
    <button
      class="sc-AxirZ sc-AxiKw iwrrMN sc-AxhUy bnlmnx"
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      保存する
    </button>
    <button
      class="sc-AxirZ sc-AxiKw iwrrMN sc-AxgMl hGPnli"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
      height="42px"
    >
      <div
        class="sc-Axmtr kFYDZB"
        size="24"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M12,15,7.757,10.757,9.172,9.343,12,12.172l2.828-2.829,1.415,1.414Z"
            fill="#FDFEFF"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-fzplWN giuPsl"
  >
    <div
      class="sc-fzpans iafMum"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="sc-AxmLO huMKRI"
      >
        <hr
          class="sc-fzoLsD kYtNNl"
        />
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            保存する
          </p>
        </div>
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            保存して実行する
          </p>
        </div>
        <hr
          class="sc-fzoLsD kYtNNl"
        />
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            下書きとして保存する
          </p>
        </div>
        <div
          class="sc-fzozJi jlATwE"
        >
          <p
            class="sc-AxjAm dflXoF"
            color="#041C33"
            font-size="13px"
          >
            やっぱり何もしない
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
